Finished writting related work

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -823,3 +823,64 @@ year = {2018},
   year={2020},
   publisher={IEEE}
 }
+
+@article{luckcuck2019formal,
+  title={Formal specification and verification of autonomous robotic systems: A survey},
+  author={Luckcuck, Matt and Farrell, Marie and Dennis, Louise A and Dixon, Clare and Fisher, Michael},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={52},
+  number={5},
+  pages={1--41},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{webster2014generating,
+  title={Generating certification evidence for autonomous unmanned aircraft using model checking and simulation},
+  author={Webster, Matt and Cameron, Neil and Fisher, Michael and Jump, Mike},
+  journal={Journal of Aerospace Information Systems},
+  volume={11},
+  number={5},
+  pages={258--279},
+  year={2014},
+  publisher={American Institute of Aeronautics and Astronautics}
+}
+
+@inproceedings{akella2009model,
+  title={Model-checking BNDC properties in cyber-physical systems},
+  author={Akella, Ravi and McMillin, Bruce M},
+  booktitle={2009 33rd annual ieee international computer software and applications conference},
+  volume={1},
+  pages={660--663},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{clarke2011statistical,
+  title={Statistical model checking for cyber-physical systems},
+  author={Clarke, Edmund M and Zuliani, Paolo},
+  booktitle={International symposium on automated technology for verification and analysis},
+  pages={1--12},
+  year={2011},
+  organization={Springer}
+}
+
+@article{botaschanjan2008correctness,
+  title={On the correctness of upper layers of automotive systems},
+  author={Botaschanjan, Jewgenij and Broy, Manfred and Gruler, Alexander and Harhurin, Alexander and Knapp, Steffen and Kof, Leonid and Paul, Wolfgang and Spichkova, Maria},
+  journal={Formal aspects of computing},
+  volume={20},
+  number={6},
+  pages={637--662},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{jones2014anomaly,
+  title={Anomaly detection in cyber-physical systems: A formal methods approach},
+  author={Jones, Austin and Kong, Zhaodan and Belta, Calin},
+  booktitle={53rd IEEE Conference on Decision and Control},
+  pages={848--853},
+  year={2014},
+  organization={IEEE}
+}
