Adding Intro and abstract

--- a/tex/resumo.tex
+++ b/tex/resumo.tex
@@ -1,1 +1,5 @@
-Donec pellentesque, libero eu fermentum posuere, odio sapien blandit lacus, non tincidunt nibh mi id ante. Donec ac ligula sed eros condimentum dapibus molestie ultricies dui. Vestibulum nec luctus urna, ac finibus diam. Vivamus sapien lacus, pulvinar vel turpis sit amet, faucibus efficitur libero. Aliquam non nibh feugiat, luctus eros ac, pulvinar enim. Vestibulum a sem ac lacus tincidunt luctus. Ut dapibus, metus et consectetur venenatis, felis arcu ullamcorper neque, ultrices euismod nunc nibh in lectus. Suspendisse sem eros, lobortis ac tellus molestie, vestibulum rutrum mauris. Nunc congue pharetra erat. Mauris mi augue, euismod ut facilisis quis, rhoncus in velit. Vestibulum finibus tempus pulvinar. Mauris sodales sed urna vitae mattis.
+Os sistemas ciberfísicos são uma realidade definitiva na nossa vida quotidiana, especialmente nos últimos anos. No entanto, a complexidade inerente a estes domínios suscita alguns desafios como por exemplo acontecimentos imprevistos, dificuldades em representar os processos cibernéticos ou físicos, e o conhecimento incompleto dos contextos do ambiente. Tudo isso pode tornar os CPS pouco fiáveis em tempo de execução, causando efeitos desastrosos. 
+
+Procurar inspiração em processos de outros campos é uma atividade muito comum na Informática. A natureza, especialmente a biologia, há muito que serve como uma fonte frutuosa de metodologias como as abordagens de inteligência artificial. O Algoritmo de Selecção Negativa, por exemplo, é uma técnica de base imunológica com múltiplas aplicações bem sucedidas em CPS, principalmente no campo do diagnóstico de falhas para a identificação de comportamentos anômalos. A explicabilidade do algoritmo pode trazer benefícios expressivos para a concepção e verificação de CPS, ajudando a compreender os padrões de violação de propriedade, e assim melhorar a especificação do sistema.
+
+Neste trabalho, é proposta uma metodologia que visa aumentar a fiabilidade de CPS. Isto é feito através de um diagnóstico sistemático das violações das propriedades do sistema baseado em dados gerados por um protótipo, realizado nas fases iniciais de desenvolvimento. Um algoritmo de inspiração imunológica chamado Seleção Negativa (NSA) serve como método de redundância analítica para isolar e identificar a causa da violação de propriedade no sistema. É possível que, através do arrazoamento sobre as razões pelas quais as violações de propriedade acontecem, a especificação do sistema e a própria propriedade possam ser refinadas, mecanismos tolerantes a falhas possam ser criados permitindo, assim, o desenvolvimento de aplicações mais seguras e melhores.
