--- a/tex/1_Introduction.tex
+++ b/tex/1_Introduction.tex
@@ -1,8 +1,12 @@
+% Nature, and particularly biology, has long represented a source of inspiration for new computational intelligence paradigms. Similar to the way the nervous system functioning inspired the development of Artificial Neural Networks (ANN), and the Darwinian theory of evolution motivated the development of Evolutionary Algorithms (EA), the study of the biological immune system (BIS) led to the emergence of Artificial Immune Systems (AIS). Since the early 1990s these new emerging soft computing techniques have already been applied in various domains such as pattern recognition, data analysis, fault diagnosis, anomaly detection, machine learning and optimization
+
+
+
 \section{Problem Definition}
 
 %%%% Context %%%%
 % blablabla
-Cyber-physical systems (CPSs) are a definite reality in our day-to-day lives, specially in the recent years. It is fair to say that the development of autonomous systems and the Internet of Things has taken us quite near to the future visions we had a few decades ago. Flying cars were supplanted by unmanned aircraft and autonomous drones, for instance, although these technologies are now used for a variety of applications rather than just passenger transportation. The usage of CPSs are increasingly amongst sophisticated applications, whose domains include self-driving vehicles, smart homes, smart cities, and more.
+Cyber-physical systems are systems that integrate software components with physical processes \cite{lee2008cyber}. They are a definite reality in our day-to-day lives, specially in the recent years. It is fair to say that the development of autonomous systems and the Internet of Things has taken us quite near to the future visions we had a few decades ago. Flying cars were supplanted by unmanned aircraft and autonomous drones, for instance, although these technologies are now used for a variety of applications rather than just passenger transportation. The usage of CPSs are increasingly amongst sophisticated applications, whose domains include self-driving vehicles, smart homes, smart cities, and more.
 
 % safety-critical systems need assurances 
 Nevertheless, the complexity inherent of these domains raises some challanges. Unforeseen events, for example, might make the CPS unreliable at runtime, which could have disastrous effects. This is a fact, particularly for safety-critical systems, which are subject to strict safety rules, time limitations, and performance requirements, and whose malfunctions might potentially endanger the user's life. Such systems demand the provision of assurances to guarantee that the system's goals are met during its entire lifespan, from conception to operation. 
@@ -10,15 +14,22 @@ Nevertheless, the complexity inherent of these domains raises some challanges. U
 % they are hard to achieve
 Modern techniques view formal methods as the most promising means of delivering such evidences \cite{assurances2017}. Model checking, for instance, is a model-based method run tipically offline to check the fulfillment of goals and properties for all attainable states in the model. 
 % It enables traceable adjustments of the system both by humans and by the system itself, in case of self-adaptive systems, to react to changes in the requirements. 
-However, the provision of assurances is a difficult undertaking yet to be perfectly achieved \cite{patankar2020safety}. One of the reasons is that, when applications are first designed, the knowledge about the environment in which they will be deployed may be incomplete, and also subject to continuous change over the application's lifetime \cite{assurances2017}. These contextual uncertainties, affect the quality aspects of CPSs operation both at a physical and at a logical level, such as a freezing temperature affecting a sensor's capacity to deliver reliable data. 
+However, this is a difficult undertaking yet to be perfectly achieved \cite{patankar2020safety}. One of the reasons is that, when applications are first designed, the knowledge about the environment in which they will be deployed may be incomplete, and also subject to continuous change over the application's lifetime \cite{assurances2017}. These uncertainties may affect the quality aspects of CPSs operation both at a physical and at a logical level, such as a freezing temperature affecting a sensor's capacity to deliver reliable data. 
 
-Besides that, the complexities of representing both the cyber and physical aspects of any CPS challenges the task of modeling such systems. Oversimplified models may be invalidated for not anticipating failures dependant on the two layers \cite{2014PerceptionsSOTAV&VCPS}. Often times, the verification mechanism well depicts either the cyber or the physical process, but not both. Physical processes, for instance, are modeled by differential equations while the discrete behavior can expressed by state machines \cite{Baheti2019CyberPhysicalS}. Even though this two-fold segmented modeling may suffice for the development of CPSs, it creates a significant challenge for verifying the safety and correctness of the overall system and the physical-behavioral interactions at a component level.
+Besides that, the complexities of representing both the cyber and physical aspects of any CPS challenges the task of modeling such systems. Oversimplified models may be invalidated for not anticipating failures dependant on the two layers \cite{2014PerceptionsSOTAV&VCPS}. Often times, the verification mechanism well depicts either the cyber or the physical process, but not both. Physical processes, for instance, are modeled by differential equations while the discrete behavior can expressed by state machines \cite{Baheti2019CyberPhysicalS}. Even though this two-fold segmented modeling may suffice for the development of CPSs in some cases, it creates a significant challenge for verifying the safety and correctness of the overall system and the physical-behavioral interactions at a component level.
 
-In an ideal scenario, developers should be granted complete knowledge of the system before entering the implementation phase. This would allow the verification at design time through the examination of all potential context and system configurations or by the anticipation of which one would be chosen. In reality, both scenarios are impractical since there are too many potential outcomes to predict. Additionally, because the information needed is only available at runtime, it becomes challenging to forecast from the earliest phases of development. All of this can lead to inaccurate estimations of a system's safety and reliability \cite{2014PerceptionsSOTAV&VCPS}.
+In an ideal scenario, developers should be granted complete knowledge of the system before entering the implementation phase. This would allow the verification at design time through the examination or the anticipation of the potential context and system configurations . In reality, both scenarios are impractical since there are too many potential outcomes to predict. Additionally, because the information needed is only available at runtime, it becomes challenging to forecast from the earliest phases of development. All of this can lead to inaccurate estimations of a system's reliability \cite{2014PerceptionsSOTAV&VCPS}.
 
+Hence, there is a need of new ways to address these issues, that account for the complexity of performing verification in these CPSs in a way that increases the reliabitiy of the system while still in the early phases of development.
 % The high demand of safety and reliability in CPS' domains also makes it essential not only to detect but also to isolate and identify faults and abnormalities as early as possible. A system fault can be described as a deviance from the acceptable or usual state of at least one distinctive property or parameter of the system \cite{gao2015survey}. A worth mentioning example is the violation of a system property, which was derived from the requirements and describes what the system should do \cite{2008PrinciplesModelChecking}. The fault diagnosis can be performed by the Analytical redundancy method, which compares input and output data to prior knowledge of a healthy system. This process allows for the removal of the negative effects from the faulty parts on the system's normal operation, thus, increasing the robustness of the CPS. When performed in the first stages of development, it allows for the implementation of fault-tolerant applications that minimizes potential malfunctionings and dangerous situations.
 
-After taking into account the existing state of the field, and all the restrictions mentioned in the preceding sentences, we condense the goal of this study into the following research question:
+Seeking inspiration in processes from other fields is a very common activity in Computer Science. Nature, especially biology, has long served as a fruitfull source of methodologies like artificial intelligence approaches. Artificial Neural Networks (ANN) are inspired by the functioning of the nervous system, Evolutionary Algorithms (EA) were based on the Darwinian theory of evolution, and the biologia immune system led to the creation of Artificial Immune Systems (AIS). These new developing soft computing approaches have already been employed in a variety of disciplines since the early 1990s. 
+
+The Negative Selection Algorithm \cite{ICBook2009}, for example, is an immuno-based technique with multiple successful applications in the field of CPS, primarily in the field of fault diagnostics for the identification of anomalous behavior. This one-class method works by developing detectors aimed at classifying data that corresponds to abnormal behavior. A carefull study of these detectors may lead to explanations about the patterns that generate such behaviors, isolating the fault and enabling the development of fault-tolerant mechanisms that increase the reliability of CPSs. 
+
+This algorithm may bring several benefits for the field of CPS verification. By defining as abnormal behavior situations where the formalised system properties are not met, the patterns that define violations could be assessed and, hence, the system properties could be enhanced. 
+
+Therefore, after taking into account the existing state of the field, and all the restrictions mentioned in the preceding sentences, we condense the goal of this study into the following research question:
 
 
 
@@ -89,7 +100,7 @@ After taking into account the existing state of the field, and all the restricti
 
 \noindent\fbox{
 	\parbox{\textwidth}{
-		\textbf{RQ:} Is it possible to assess the safety of CPSs by learning the patterns of system violation properties, while accounting for the complexity of the physical-behavioral interactions inherent of such systems?
+		\textbf{RQ:} how to accurately enhance property specifications of CPS despite the complex interactions between its physical and cyber nature?
 	}
 }
 \vspace{0.3 cm}
@@ -97,7 +108,7 @@ After taking into account the existing state of the field, and all the restricti
 %%%% Method %%%%
 \section{Proposed Solution}
 
-In this work, we aim at the creation of a framework to help developers designing safe and correct cyber-physical systems. This is achieved by a systematical diagnosis of system properties violations based on data generated by a protoype, performed in the early stages of development. An immuno-inspired algorithm called Negative Selection (NSA) serves as an analytical redundancy method to isolate and identify the cause for violation in the system. We believe that, by reasoning about why the property violations happen, the system specification and the property themselves may be refined, fault-tolerant mechanisms may be added, and, thus, safer and better applications might be written.
+In this work, we propose a methodology that aims at increasing the reliability of CPSs. This is achieved by a systematical diagnosis of system properties violations based on data generated by a protoype, performed in the early stages of development. An immuno-inspired algorithm called Negative Selection (NSA) serves as an analytical redundancy method to isolate and identify the cause for property violation in the system. We believe that, by reasoning about why the property violations happen, the system specification and the property themselves may be refined, fault-tolerant mechanisms may be added, and, thus, safer and better applications might be written.
 
 The methodology is comprised of two main phases. In the first phase, the system specification in the form of a Contextual Goal Model (CGM) is used as input to model the behavior of the system as timed automata. Then, by using pattern catalogs, real-time system properties are derived from the CGM and expressed as observer automata. The system model along with the observers, then, undergo a model checking process to assert the system's correctness and the satisfiability of the properties. Finally, a prototype of the system is implemented and several simulations are performed with varying configurations, input data and parameters in order to account for the context variability that may arise in runtime. 
 
