--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -28,8 +28,8 @@
 
 \titulo{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}%
 
-\palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
-\keywords{LaTeX, scientific method, thesis}%
+\palavraschave{Sistemas Cyber-físicos, Especificação de Propriedades, Seleção Negativa, Diagnóstico de Falhas, Verificação}%
+\keywords{Cyber-physical Sistems, Property Specification, Negative Selection, Fault Diagnosis, Verification}%
 
 \newcommand{\unbcic}{\texttt{UnB-CIC}}%
 
@@ -42,9 +42,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     \capitulo{1_Introduction}{Introduction}\label{sec:intro}
-    \capitulo{3_RelatedWork}{Related work}
     \capitulo{2_Background}{Background}
     \capitulo{4_Proposal}{An AIS-based approach to reduce uncertainty in self-adaptive systems}
+    \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Schedule}
     % \capitulo{6_Conclusion}{Conclusion and future work}
 \end{document}%
