fixed som mispelling

--- a/tex/3_RelatedWork.tex
+++ b/tex/3_RelatedWork.tex
@@ -30,7 +30,7 @@ Formal Methods are widely applied the analysis of CPS because of their expanding
 Nevertheless, the complexity found in CPSs can bring problems to the design of such systems. 
 Representing both the cyber and physical aspects of any CPS challenges the task of modeling such systems, since we are combining discrete and continuous models. Aside from the complexity of representing the real environment, a CPS has only a limited understanding of its surroundings. Sensing constraints induced by sensor blindspots and sensor interference complicate the modeling process \cite{luckcuck2019formal}. Hence, oversimplified models may be invalidated for not anticipating failures dependant on the two layers \cite{2014PerceptionsSOTAV&VCPS}. 
 
-Akella et al. \cite{akella2009model}, for instance, addresses this problem by trying to simplify the physical model. This was done by discretizing the events that cause flow change and to representint the CPS as a deterministic state model with discrete flow values inside its physical components. Model checking is then utilized to formally test insecure interactions between all conceivable behaviors of the specified CPS. Botaschanjan et al. \cite{botaschanjan2008correctness} provide a sucessfull attempt to close this gap in automotive systems by combining the model checking verification of the lower layers of the system with the simulation of the upper layers.
+Akella et al. \cite{akella2009model}, for instance, addresses this problem by trying to simplify the physical model. This was done by discretizing the events that cause flow change and to representing the CPS as a deterministic state model with discrete flow values inside its physical components. Model checking is then utilized to formally test insecure interactions between all conceivable behaviors of the specified CPS. Botaschanjan et al. \cite{botaschanjan2008correctness} provide a sucessfull attempt to close this gap in automotive systems by combining the model checking verification of the lower layers of the system with the simulation of the upper layers.
 
 Formal methods can also be used to perform anomaly detection. Jones et al. \cite{jones2014anomaly} uses formal methods to an anomaly detection framework to determine whether or not a particular CPS is under attack. They build STL properties based on the normal behavior of the system and flag the abnormal behavior. Then, a one-class SVM model is used to detect deviations. Our approach share some similarities with Jone's. Nonself data, i.e. anomalies, are flagged according to system properties and a one-class machine learning algorithm (NSA) is performed to understand the patterns based on the self data. Although in our work the properties are specified by the stakeholders and undergo a process of formalism. Besides that, we leverage the detectors generated to gain insight on the violations, which is used to enhance the specification. Webster \cite{webster2014generating} also integrates model checking and simulation in order to ensure safe operations for autonomous unmanned aircrafts. They argue that the high level of assurance provided by the formal method would increase the accuracy of the simulation model.
 
